--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h3 class="italic text-white text-center">AVALIAÇÕES DOS CLIENTE</h3>
+                    <h3 class="italic text-white text-center">AVALIAÇÕES DOS CLIENTES</h3>
                     <ul class="list-inline mt-1 avaliacao text-center rate">
                         <li class="list-inline-item"><i class="fas fa-star text-yellow"></i></li>
                         <li class="list-inline-item"><i class="fas fa-star text-yellow"></i></li>
