mudando email de suporte

--- a/index.html
+++ b/index.html
@@ -485,7 +485,8 @@
                             href="https://api.whatsapp.com/send?phone=554391652224&text=Oi!%20Gostaria%20de%20comprar%20a%20chapinha%20smart%2C%20pode%20me%20ajudar%3F"><i
                                 class="fab fa-whatsapp"></i> WhatsApp: (21) 9668-59758</a></p>
                     <p><i class="far fa-envelope"></i> Email: <a
-                            href="mailto:suporte@goldenbarberpro.com.br">suporte@goldenbarberpro.com.br</a></p>
+                            href="mailto:goldenbarberpro@seu-atendimento.com.br">goldenbarberpro@seu-atendimento.com.br</a>
+                    </p>
                     <div class="d-grid gap-2">
                         <a target="_blank"
                             href="https://api.whatsapp.com/send?phone=5521966859758&text=Oi!%20Gostaria%20de%20comprar%20a%20Golder%20Barber%20Pro">
