--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="d-grid gap-2 col-xs-12 col-sm-12 col-md-7 col-lg-7">
-                    <a class="b-link" href="#preco"><button style="line-height: 21px;"
+                    <a id="checkout" class="b-link" href="#preco"><button style="line-height: 21px;"
                             class="btn-buy btn btn-primary gap-2 p-3" type="button">QUERO COMPRAR AGORA</button>
                         <small class="m-1 text-center" style="color: blue; display: block; margin: 0 auto;">A
                             partir
@@ -600,7 +600,8 @@
     <div class="container pb-3">
         <div class="row d-flex justify-content-center">
             <div class="d-grid gap-2 col-xs-12 col-sm-12 col-md-7 col-lg-7">
-                <a class="b-link" href="#preco"><button class="btn-buy btn btn-primary gap-2 p-3" type="button">COMPRAR
+                <a id="checkout" class="b-link" href="#preco"><button class="btn-buy btn btn-primary gap-2 p-3"
+                        type="button">COMPRAR
                         AGORA</button>
                     <small class="m-1 text-center" style="color: blue; display: block; margin: 0 auto;">A
                         partir
